# ssn-speech

./: .gitignore  README.md  aggregate_seeds.py  pyproject.toml  run_all_sequential.sh  run_seed.py  setup.sh  submit_seeds.sh
