[project]
name = "ssn-speech"
version = "0.1.0"
description = "Pure-SSN model for speech-like computation with interneuron perturbations"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
]

[project.optional-dependencies]
# torch must be installed separately with the correct CUDA index
# See README.md for instructions

[tool.uv]
# torch is managed outside uv because it needs the CUDA-specific index URL
